# EndpointsJSON

./: .gitignore  Dockerfile  LICENSE  README.md  add-module.sh  add-package.bat  add-package.sh  app.py  dependencies.txt  docker-run.sh  endpoints.json  install-dependencies.sh  install.bat  install.sh  pyproject.toml  remove-module.sh  remove-package.bat  remove-package.sh  version.rc
src/: app.py
src/Components/: __init__.py  addnew.py  endpoint.py  endpoints.py  help.py  home.py
src/Fonts/: fonts.py
src/Typing/: types.py
src/Utils/: __init__.py  utils.py
